--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "require": {
     "php": ">=5.4",
-    "silex/silex": "~1.3",
+    "silex/silex": "~1.3"
   },
   "require-dev": {
     "google/cloud-tools": "^0.6",
