--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,8 @@
-
+<IfModule mod_rewrite.c>
+    Options -MultiViews
+    php_value display_errors on
+    RewriteEngine On
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^ index.php [QSA,L]
+</IfModule>
